--- a/sample.fxml
+++ b/sample.fxml
@@ -1,29 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="547.0" prefWidth="838.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
-      <ColorPicker fx:id="doColor" layoutX="370.0" layoutY="309.0" onAction="#btnDopColor" prefHeight="31.0" prefWidth="92.0" />
-      <ColorPicker fx:id="generalColor" layoutX="259.0" layoutY="309.0" onAction="#btnGenColor" prefHeight="31.0" prefWidth="92.0" />
-      <Button fx:id="btnLoc" layoutX="222.0" layoutY="351.0" mnemonicParsing="false" onAction="#btnActLoc" prefHeight="31.0" prefWidth="200.0" text="Задать просто локомотив" />
-      <Button fx:id="btnPasLoc" layoutX="432.0" layoutY="351.0" mnemonicParsing="false" onAction="#btnActPasLoc" text="Задать элетровоз" />
-      <Button fx:id="btnMove" layoutX="478.0" layoutY="309.0" mnemonicParsing="false" onAction="#btnActMove" text="Движение" />
-      <TextField fx:id="fieldMaxSpeed" layoutX="135.0" layoutY="278.0" prefHeight="21.0" prefWidth="113.0" />
-      <TextField fx:id="fieldMaxPas" layoutX="135.0" layoutY="310.0" prefHeight="31.0" prefWidth="113.0" />
-      <TextField fx:id="fieldWeight" layoutX="89.0" layoutY="351.0" prefHeight="31.0" prefWidth="113.0" />
-      <CheckBox fx:id="checkBox3" layoutX="486.0" layoutY="283.0" mnemonicParsing="false" text="anthen" />
-      <CheckBox fx:id="checkBox2" layoutX="385.0" layoutY="283.0" mnemonicParsing="false" text="generator" />
-      <CheckBox fx:id="checkBox1" layoutX="270.0" layoutY="283.0" mnemonicParsing="false" text="lightEngine" />
-      <Label layoutX="13.0" layoutY="356.0" text="Weight:" />
-      <Label layoutX="13.0" layoutY="314.0" text="Max count pas:" />
-      <Label layoutX="13.0" layoutY="283.0" text="Max speed:" />
-      <Pane fx:id="drawPanel" layoutX="14.0" layoutY="14.0" prefHeight="257.0" prefWidth="575.0" />
+      <ColorPicker fx:id="doColor" layoutX="515.0" layoutY="440.0" onAction="#btnDopColor" prefHeight="31.0" prefWidth="92.0" visible="false" />
+      <ColorPicker fx:id="generalColor" layoutX="404.0" layoutY="440.0" onAction="#btnGenColor" prefHeight="31.0" prefWidth="92.0" visible="false" />
+      <Button fx:id="btnLoc" layoutX="367.0" layoutY="482.0" mnemonicParsing="false" onAction="#btnActLoc" prefHeight="31.0" prefWidth="200.0" text="Задать просто локомотив" visible="false" />
+      <Button fx:id="btnPasLoc" layoutX="577.0" layoutY="482.0" mnemonicParsing="false" onAction="#btnActPasLoc" text="Задать элетровоз" visible="false" />
+      <Button fx:id="btnMove" layoutX="623.0" layoutY="440.0" mnemonicParsing="false" onAction="#btnActMove" text="Движение" visible="false" />
+      <TextField fx:id="fieldMaxSpeed" layoutX="280.0" layoutY="409.0" prefHeight="21.0" prefWidth="113.0" visible="false" />
+      <TextField fx:id="fieldMaxPas" layoutX="280.0" layoutY="441.0" prefHeight="31.0" prefWidth="113.0" visible="false" />
+      <TextField fx:id="fieldWeight" layoutX="234.0" layoutY="482.0" prefHeight="31.0" prefWidth="113.0" visible="false" />
+      <CheckBox fx:id="checkBox3" layoutX="631.0" layoutY="414.0" mnemonicParsing="false" text="anthen" visible="false" />
+      <CheckBox fx:id="checkBox2" layoutX="530.0" layoutY="414.0" mnemonicParsing="false" text="generator" visible="false" />
+      <CheckBox fx:id="checkBox1" layoutX="415.0" layoutY="414.0" mnemonicParsing="false" text="lightEngine" visible="false" />
+      <Label layoutX="158.0" layoutY="487.0" text="Weight:" visible="false" />
+      <Label layoutX="158.0" layoutY="445.0" text="Max count pas:" visible="false" />
+      <Label layoutX="158.0" layoutY="414.0" text="Max speed:" visible="false" />
+      <Pane fx:id="drawPanel" layoutX="437.0" prefHeight="403.0" prefWidth="401.0" style="-fx-background-color: #ff7255;" />
+      <Button fx:id="putPasTrainBtn" layoutX="248.0" layoutY="14.0" mnemonicParsing="false" onAction="#putPasTrainBtnAction" prefHeight="60.0" prefWidth="177.0" text="Поставить электровоз" wrapText="true" />
+      <Button fx:id="putTrainBtn" layoutX="248.0" layoutY="86.0" mnemonicParsing="false" onAction="#putTrainBtnAction" prefHeight="60.0" prefWidth="177.0" text="Поставить локомотив" wrapText="true" />
+      <Button fx:id="takeBtn" layoutX="248.0" layoutY="156.0" mnemonicParsing="false" onAction="#takeBtnActionA" prefHeight="60.0" prefWidth="177.0" text="Взять поезд" />
+      <Pane fx:id="dopDrawPanel" layoutX="242.0" layoutY="224.0" prefHeight="179.0" prefWidth="190.0" style="-fx-background-color: a6caf0;" />
+      <TextField fx:id="countTrain" layoutX="183.0" layoutY="20.0" prefHeight="48.0" prefWidth="52.0" />
    </children>
 </AnchorPane>
