--- a/sample.fxml
+++ b/sample.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -30,5 +31,8 @@
       <Button fx:id="takeBtn" layoutX="248.0" layoutY="156.0" mnemonicParsing="false" onAction="#takeBtnActionA" prefHeight="60.0" prefWidth="177.0" text="Взять поезд" />
       <Pane fx:id="dopDrawPanel" layoutX="242.0" layoutY="224.0" prefHeight="179.0" prefWidth="190.0" style="-fx-background-color: a6caf0;" />
       <TextField fx:id="countTrain" layoutX="183.0" layoutY="20.0" prefHeight="48.0" prefWidth="52.0" />
+      <ListView fx:id="listBoxLevels" layoutX="24.0" layoutY="86.0" prefHeight="200.0" prefWidth="200.0" />
+      <Button fx:id="lvlDownBtn" layoutX="24.0" layoutY="314.0" mnemonicParsing="false" onAction="#lvlDownBtnAction" prefHeight="86.0" prefWidth="84.0" text="&lt;&lt;" />
+      <Button fx:id="lvlUpBtn" layoutX="141.0" layoutY="314.0" mnemonicParsing="false" onAction="#lvlUpBtnAction" prefHeight="86.0" prefWidth="84.0" text="&gt;&gt;" />
    </children>
 </AnchorPane>
