--- a/sample.fxml
+++ b/sample.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -34,6 +36,12 @@
       <ListView fx:id="listBoxLevels" layoutX="24.0" layoutY="86.0" prefHeight="200.0" prefWidth="200.0" />
       <Button fx:id="lvlDownBtn" layoutX="24.0" layoutY="314.0" mnemonicParsing="false" onAction="#lvlDownBtnAction" prefHeight="86.0" prefWidth="84.0" text="&lt;&lt;" />
       <Button fx:id="lvlUpBtn" layoutX="141.0" layoutY="314.0" mnemonicParsing="false" onAction="#lvlUpBtnAction" prefHeight="86.0" prefWidth="84.0" text="&gt;&gt;" />
-      <Button fx:id="superAddBtn" layoutX="34.0" layoutY="29.0" mnemonicParsing="false" onAction="#superAddBtnAction" text="ДОБАВИТЬ!" />
+      <Button fx:id="superAddBtn" layoutX="40.0" layoutY="44.0" mnemonicParsing="false" onAction="#superAddBtnAction" text="ДОБАВИТЬ!" />
+      <MenuButton layoutY="-1.0" mnemonicParsing="false" text="File">
+        <items>
+          <MenuItem fx:id="saveBtn" mnemonicParsing="false" onAction="#saveBtnAction" text="Сохранить" />
+          <MenuItem fx:id="loadBtn" mnemonicParsing="false" onAction="#loadBtnAction" text="Загрузить" />
+        </items>
+      </MenuButton>
    </children>
 </AnchorPane>
